<?xml version="1.0"?>
<package>
  <name>result2csv</name>
  <version>0.0.0</version>
  <description>The gps_localizer package</description>
  <maintainer email="h_ohta@ertl.jp">h_ohta</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gps</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gps</run_depend>

  <export>
  </export>
</package>
