<package format="2">
  <name>mrpt_viewer</name>
  <version>0.0.1</version>
  <description>
    develop tools
  </description>
  <author>WengLihong</author>
  <maintainer email="wengge987@163.com">WengLihong</maintainer>
  <license>BSD</license>
  <url>s</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

	<depend>mrpt</depend>
	<depend>mrpt_bridge</depend>
	<depend>mrpt_maps</depend>
	<depend>mrpt_msgs</depend>
	<depend>mrpt_local_obstacles</depend>

	<depend>pcl</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>

  <export>
  </export>
</package>
